added login modal; added validation on user model; installed bootstrap_form gem; installed bycrypt gem

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,3 +17,15 @@
 .navbar {
   border-radius: 0;
 }
+
+li {
+  cursor: pointer;
+}
+
+.alert {
+  border-radius: 0;
+}
+
+.modal {
+  border-radius: 0;
+}
