--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,33 +22,39 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <a class="navbar-brand" href="#">Title</a>
+    <a class="navbar-brand" href="/">Title</a>
   </div>
 
   <!-- Collect the nav links, forms, and other content for toggling -->
   <div class="collapse navbar-collapse navbar-ex1-collapse">
-<!--     <ul class="nav navbar-nav">
-      <li class="active"><a href="#">Link</a></li>
-      <li><a href="#">Link</a></li>
-    </ul> -->
-<!--     <form class="navbar-form navbar-left" role="search">
-      <div class="form-group">
-        <input type="text" class="form-control" placeholder="Search">
-      </div>
-      <button type="submit" class="btn btn-default">Submit</button>
-    </form> -->
     <ul class="nav navbar-nav navbar-right">
       <li><a href="#">About Us</a></li>
       <li><a href="#">How it works</a></li>
       <li><a href="#">Sign Up</a></li>
-      <li><a href="#">Log In</a></li>
-      <li><a href="#">Log out</a></li>
+      <li><a id="log" data-target='#login' data-toggle="modal">Login</a></li>
+      <li><a href="/logout">Log out</a></li>
     </ul>
   </div><!-- /.navbar-collapse -->
 </nav>
 
 <div class="container-fluid">
+  <%= render 'partials/flash' %>
+
   <%= yield %> 
+</div>
+
+<div class="modal fade" id="login">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        <h4 class="modal-title">Log In</h4>
+      </div>
+      <div class="modal-body">
+        <%= render 'partials/login' %>
+      </div>
+    </div>
+  </div>
 </div>
 
 </body>
