geocoder & gmap4rails works

--- a/app/views/properties/new.html.erb
+++ b/app/views/properties/new.html.erb
@@ -3,5 +3,7 @@
 	<%= p.text_field :address %>
 	<%= p.text_field :parking_quantity %>
 	<%= p.text_field :price %>
+	<%= p.text_field :title %>
+	<%= p.text_field :description %>
 	<%= p.primary %>
 <% end %>
