--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,6 +13,7 @@
  *= require_tree .
  *= require_self
  */
+ 
 
 .navbar {
   border-radius: 0;
@@ -27,5 +28,9 @@ li {
 }
 
 .modal {
+  border-radius: 0;
+}
+
+.dropdown-menu {
   border-radius: 0;
 }
