--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,7 +41,7 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Hello, <%= @current_user.name %>! <b class="caret"></b></a>
           <ul class="dropdown-menu">
-            <li><a href="#">Profile</a></li>
+            <li><a href="/profile/<%= @current_user.id %>">Profile</a></li>
             <li><a href="/logout">Log Out</a></li>
           </ul>
         </li>
