fixed some errors with profile page

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -23,8 +23,14 @@
 
 <h3>My Properties</h3>
 <div id="prop">
-	<%= link to%>
-	<%#= link_to 'Edit', edit_property_path(creature), class: 'btn btn-primary' %>
+
+	<%#= link_to 'Properties', properties_path(@property), class: 'btn btn-primary' %>
+	<% @property.each do |f|%>
+	<p>
+		<%= f.address %>
+	</p>
+	<% end %>
+	<%#= link_to 'Edit', edit_property_path(), class: 'btn btn-primary' %>
     <%#= link_to 'Delete', property, class: 'btn btn-danger', method: :delete %>
 	<button type="submit" formtarget="_blank">Add New Property</button><button>	
 	<button type="submit" formtarget="_blank">Edit Property</button>
