--- a/app/views/partials/_signup.html.erb
+++ b/app/views/partials/_signup.html.erb
@@ -3,7 +3,7 @@
   <%= f.text_field :email, placeholder: 'Example@email.com' %>
   <%= f.password_field :password %>
   <%= f.password_field :password_confirmation, label: 'Confirm Password' %>
-  <%= f.text_field :phone %>
+  <%= f.telephone_field :phone %>
 
   <%= f.primary 'Signup' %>
 <% end %>
