--- a/app/assets/stylesheets/results.scss
+++ b/app/assets/stylesheets/results.scss
@@ -1,3 +1,15 @@
 // Place all the styles related to the results controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.results_left {
+	// border: 2px red solid;
+}
+
+.results_right {
+	// border: 2px green solid;
+}
+
+.results_row {
+	padding: 1em
+}
