--- a/app/views/results/index.html.erb
+++ b/app/views/results/index.html.erb
@@ -3,12 +3,36 @@
 <%= form_tag results_path, :method => :get do %>
 	<p>
 		<%= text_field_tag :search, params[:search] %>
+		<%= text_field_tag :parking_quantity, params[:parking_quantity] %>
+		
+
 		<%= submit_tag "Search Near", :name => nil %>
  	</p>
 <% end %>
 
-<div style='width: 800px;'>
-  <div id="map" style='width: 800px; height: 400px;'></div>
+
+
+<div class="results_row row">
+
+	<div class="results_left col-xs-6 col-sm-6 col-md-6 col-lg-6">
+	
+
+	<% @properties.each do |p|%>
+		<div class="well">
+			<p>Title: <%= p.title %></p>
+			<p>Description: <%= p.description %></p>
+			<p>Price: $<%= p.price %></p>
+			<p>Parking available: <%= p.parking_quantity %></p>
+			<p>Address: <%= p.address %></p>
+		</div>
+	<% end %>	
+
+	</div>
+
+	<div class="results_right col-xs-6 col-sm-6 col-md-6 col-lg-6" style='width: 400px;'>
+		<div id="map" style='width: 400px; height: 800px;'></div>
+	</div>
+
 </div>
 
 
