updated the edit property button on the profile pages to redirect to the current users profile page; updated layout on the main#index page; updated misellanous css stuff too

--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,2 +1,26 @@
-<h1>Main#index</h1>
-<p>Find me in app/views/main/index.html.erb</p>
+<div class="jumbotron">
+  <%#= image_tag "seattle.png" %>
+  <div class="innards">
+    <h1>Welcome</h1>
+  </div>
+</div>
+
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12 col-md-10 col-md-offset-1">
+      <div class="img-responsive" id="pike">
+        <h2>How it works</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique eos odio doloribus qui perspiciatis, totam perferendis, hic nemo architecto dolore accusantium ea. Ea porro necessitatibus non quis cupiditate, enim aspernatur.
+          </p>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-xs-12 col-md-10 col-md-offset-1">
+      <div clas="img-responsive" id="newyork">
+      </div>
+    </div>
+  </div>
+
+</div>
