--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Parkit</title>
-
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <!-- Google map -->
   <script src="http://maps.google.com/maps/api/js?v=3.18&sensor=false&client=&key=&libraries=geometry&language=&hl=&region="></script> 
   <script src="http://google-maps-utility-library-v3.googlecode.com/svn/tags/markerclustererplus/2.0.14/src/markerclusterer_packed.js"></script>
@@ -11,7 +11,7 @@
 
   <!-- Latest compiled and minified CSS & JS -->
   <link rel="stylesheet" media="screen" href="//netdna.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-  <link rel="stylesheet" href="/stylesheets/application.css">
+  <link rel="stylesheet" href="/stylesheets/application.scss">
   <script src="//code.jquery.com/jquery.js"></script>
   <script src="//netdna.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
@@ -20,7 +20,7 @@
 </head>
 <body>
 
-<nav class="navbar navbar-inverse" role="navigation">
+<nav class="navbar navbar-primary" role="navigation">
   <!-- Brand and toggle get grouped for better mobile display -->
   <div class="navbar-header">
     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
@@ -42,31 +42,28 @@
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Hello, <%= @current_user.name %>! <b class="caret"></b></a>
           <ul class="dropdown-menu">
             <li><a href="/profile/<%= @current_user.id %>">Profile</a></li>
-            <li><a href="/logout">Log Out</a></li>
+            <li><a href="/logout">Log out</a></li>
           </ul>
         </li>
       <% else %>
-        <li><a data-target='#signup' data-toggle='modal'>Sign Up</a></li>
-        <li><a data-target='#login' data-toggle="modal">Login</a></li>        
+        <li><a data-target='#signup' data-toggle='modal'>Sign up</a></li>
+        <li><a data-target='#login' data-toggle="modal">Log in</a></li>        
       <% end %>
     </ul>
   </div><!-- /.navbar-collapse -->
 </nav>
 
-<div class="container-fluid">
+<!-- <div class="container-fluid"> -->
   <%= render 'partials/flash' %>
   <%= yield %> 
-</div>
+<!-- </div> -->
 
 <!-- Modal for logging in -->
 <div class="modal fade" id="login">
   <div class="modal-dialog">
     <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-        <h4 class="modal-title">Log In</h4>
-      </div>
       <div class="modal-body">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
         <%= render 'partials/login' %>
       </div>
     </div>
@@ -77,11 +74,8 @@
 <div class="modal fade" id="signup">
   <div class="modal-dialog">
     <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-        <h4 class="modal-title">Sign Up</h4>
-      </div>
-      <div class="modal-body">
+      <div class="modal-body">        
+      <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
         <%= render 'partials/signup' %>
       </div>
     </div>
