--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,8 @@
 </head>
 <body>
 
+
+
 <nav class="navbar navbar-primary" role="navigation">
   <!-- Brand and toggle get grouped for better mobile display -->
   <div class="navbar-header">
@@ -29,14 +31,27 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <a class="navbar-brand" href="/">Title</a>
+    <a href="/"><img src="/assets/p3_logo.jpg" alt="P3 logo"></a>
   </div>
 
   <!-- Collect the nav links, forms, and other content for toggling -->
   <div class="collapse navbar-collapse navbar-ex1-collapse">
+    
+      <div class="searchbar form-group">
+        <%= form_tag results_path, :method => :get do %>
+          <p>
+            <%= text_field_tag :city%>
+            <%= number_field_tag :parking_quantity%>
+            <%= datetime_field_tag :checkin %>
+            <%= datetime_field_tag :checkout %>       
+            <%= submit_tag "Search Near", :name => nil %>
+          </p>     
+        
+        <% end %>
+      </div>
+
     <ul class="nav navbar-nav navbar-right">
       <li><a href="#">About Us</a></li>
-      <li><a href="#">How it works</a></li>
       <% if @current_user %>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Hello, <%= @current_user.name %>! <b class="caret"></b></a>
