--- a/app/views/results/show.html.erb
+++ b/app/views/results/show.html.erb
@@ -7,20 +7,21 @@
 	<div class="row">
 	<div class="col-md-1"></div>
 	<div class="col-md-6">
-		<div>
-			<%= image_tag 'property-placeholder.jpg' %>
-		</div>
 		<br />
 		<div class="well">
 			<div><h4><%= @property.title %></h4> <br />
 				<%= @property.description %>
-				<%= @property.parking_quantity %>
-				<%= @property.price %>
+				<div><br/>
+					Parking Quantity: <%= @property.parking_quantity %>
+				</div>
+				<div>
+					Price: <%= @property.price %>
+				</div>
 			</div><br />
 			<% if @current_user %>
-			<%= link_to 'Reserve Now', new_charge_path(p), class: 'btn btn-primary' %>
+			<%= link_to 'Reserve Now', new_charge_path(@property), class: 'btn btn-primary' %>
 			<% else %>
-			<button class="btn btn-primary">Reserve Now</button>
+			<%= link_to 'Reserve Now', result_path, class: 'btn btn-warning danger' %>
 			<% end %>
 		</div>
 	</div>
@@ -39,7 +40,7 @@
 					<input type="submit" value="Search" class="btn btn-primary mapButton" />
 				</form>
 
-					<div class="btn-group" data-toggle="buttons">
+<!-- 					<div class="btn-group" data-toggle="buttons">
 						<label class="btn btn-info">
 							<input type="radio" name="mode" id="walking" autocomplete="off" checked />
 							Walking
@@ -48,11 +49,11 @@
 							<input type="radio" name="mode" id="transit" autocomplete="off" />
 							Bus
 						</label>
-					</div>
+					</div> -->
 			</div>
 			<br>
 			<div style="width: 400px;">
-				<div id="directions" style="width: 400px; height: 300px;"></div>
+				<div id="directions" style="width: 400px; height: 400px;"></div>
 			</div>
 		</div>
 	<div class="col-md-1"></div>
