--- a/app/views/results/show.html.erb
+++ b/app/views/results/show.html.erb
@@ -7,7 +7,6 @@
 	<div class="row">
 	<div class="col-md-1"></div>
 	<div class="col-md-6">
-		<br />
 		<div class="well">
 			<div><h4><%= @property.title %></h4> <br />
 				<%= @property.description %>
@@ -32,7 +31,7 @@
 				
 					<div class="form-group">
 <!-- 						<label for="">Origin</label> -->
-						<input name="origin" type="text" class="form-control" id="" value="<%= @property.address %>">
+						<input name="origin" type="text" class="form-control" id="" value="<%= @property.address %>"><br/>
 <!-- 						<label for="">Destination</label> -->
 						<input name="destination" type="text" class="form-control" id="destination" value="" placeholder="ex: Portland">
 					</div>
