--- a/app/views/properties/new.html.erb
+++ b/app/views/properties/new.html.erb
@@ -1,13 +1,12 @@
 <h2>Add another property</h2>
 <%= bootstrap_form_for @property do |p| %>
-	CURRENT USER <%= @current_user.id %>
 	
 	<%= p.text_field :address %>
 	<%= p.text_field :parking_quantity %>
 	<%= p.text_field :price %>
 	<%= p.text_field :title %>
 	<%= p.text_field :description %>
-	<%= p.text_field :user_id, :value => @current_user.id %>
+	<%= p.hidden_field :user_id, :value => @current_user.id %>
 
 	<%= p.primary %>
 
