--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,6 +13,9 @@
  *= require_tree .
  *= require_self
  */
+@import 'bootstrap-sprockets';
+@import 'bootstrap';
+@import 'bootstrap-datetimepicker';
  
 @mixin transition($speed) {
   -o-transition: $speed;
@@ -112,7 +115,6 @@ body {
       position: relative;
       text-align: center;
       top: -300px;
-      // font-size: 28px;
       opacity: 0;
     }
 
@@ -122,7 +124,6 @@ body {
         opacity: 0;
       }
       p {
-        // font-size: 28px;
         opacity: 1;
       }
     }
@@ -133,6 +134,10 @@ body {
     background: url('/assets/newyork.jpg') center center;
     background-size: cover;
     max-width: 100%;
-    height: 100%;  
+    height: 500px;  
   }
+}
+
+.bio {
+  text-align: center;
 }
