--- a/app/views/results/show.html.erb
+++ b/app/views/results/show.html.erb
@@ -16,9 +16,9 @@
 				<%= @property.description %>
 			</div><br />
 			<% if @current_user %>
-			<%= link_to 'Reserve Now', new_charge_path, class: 'btn btn-primary' %>
+			<%= link_to 'Reserve Now', new_reservation_path(:property_id => @property.id), class: 'btn btn-primary' %>
 			<% else %>
-			<button class="btn btn-primary">Reserve Now</button>
+			<!-- <button class="btn btn-primary">Reserve Now</button> -->
 			<% end %>
 		</div>
 	</div>
