--- a/app/views/results/index.html.erb
+++ b/app/views/results/index.html.erb
@@ -20,7 +20,8 @@
 			<p>Title: <%= p.title %></p>
 			<p>Description: <%= p.description %></p>
 			<p>Price: $<%= p.price %></p>
-			<p>Parking available: <%= p.parking_quantity %></p>
+			<p>Parking capacity: <%= p.parking_quantity %></p>
+			<p>Parking available: <b><%= p.available %></b></p>
 			<p>Address: <%= p.address %></p>
 			<%= link_to "Pick this driveway", result_path(p), class: "btn btn-primary" %>
 		</div>
