--- a/app/views/results/show.html.erb
+++ b/app/views/results/show.html.erb
@@ -20,7 +20,7 @@
 			<% if @current_user %>
 			<%= link_to 'Reserve Now', new_reservation_path(:property_id => @property.id), class: 'btn btn-primary' %>
 			<% else %>
-			<!-- <button class="btn btn-primary">Reserve Now</button> -->
+			<%= link_to 'Reserve Now', result_path, class: 'btn btn-danger danger' %>
 			<% end %>
 		</div>
 	</div>
