added some changes with profile for hostings and trips

--- a/app/views/charges/new.html.erb
+++ b/app/views/charges/new.html.erb
@@ -1,3 +1,6 @@
+You have now booked for <> <%= params[:city]%>
+
+
 <%= form_tag charges_path do %>
   <article>
     <% if flash[:error].present? %>
