--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,8 +10,6 @@
 
 
   <!-- Latest compiled and minified CSS & JS -->
-  <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
-  <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"> -->
   <link rel="stylesheet" media="screen" href="//netdna.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
   <link rel="stylesheet" href="/stylesheets/application.scss">
   <script src="//code.jquery.com/jquery.js"></script>
@@ -21,6 +19,8 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+
+
 
 
 
@@ -44,18 +44,21 @@
           <p>
             <%= text_field_tag :city, nil, :placeholder => "city" %>
             <%= number_field_tag :parking_quantity, nil, :placeholder => "parking_quantity"%>
-            <%= datetime_field_tag :checkin, nil, :placeholder => "checkin" %>
-            <%= datetime_field_tag :checkout, nil, :placeholder => "checkout" %>       
+            <%= date_field :checkin, nil, :placeholder => "checkin" %>
+            <%= time_field :checkin_time, nil %>
+            <%= date_field :checkout, nil, :placeholder => "checkout" %> 
+            <%= time_field :checkout_time, nil %>      
             <%= submit_tag "Search Near", :name => nil %>
           </p>     
         
         <% end %>
       </div>
 
-    <ul class="nav navbar-nav navbar-right">
 
-      <li><a href="/about">About Us</a></li>
-      <li><a href="#">How it works</a></li>
+
+
+    <ul class="nav navbar-nav navbar-right">
+      <li><a href="#">About Us</a></li>
       <% if @current_user %>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Hello, <%= @current_user.name %>! <b class="caret"></b></a>
