--- a/app/views/results/index.html.erb
+++ b/app/views/results/index.html.erb
@@ -20,16 +20,16 @@
 			<p>Title: <%= p.title %></p>
 			<p>Description: <%= p.description %></p>
 			<p>Price: $<%= p.price %></p>
-			<p>Parking capacity: <%= p.parking_quantity %></p>
-			<p>Parking available: <b><%= p.available %></b></p>
 			<p>Address: <%= p.address %></p>
+			<p>Parking capacity: <%= p.parking_quantity %></p>
+			<p>Parking available: <b><%= p.available.nil? ? 0 : p.available %></b></p>
 
-			<% if p.available > 0 %>
+			<% if !p.available.nil? && p.available > 0 %>
 
-			<%= link_to "Pick this driveway", result_path(p), class: "btn btn-primary" %>
+				<%= link_to "Pick this driveway", result_path(p), class: "btn btn-primary" %>
 			
 			<% else %>
-			<p>No more parking available at <b><%= p.title %></b></p>
+				<p>No more parking available at <b><%= p.title %></b></p>
 
 			<% end %>
 		</div>
