close to final stuff

--- a/app/views/charges/new.html.erb
+++ b/app/views/charges/new.html.erb
@@ -1,4 +1,4 @@
-You have now booked for <> <%= params[:city]%>
+You have now booked for<%= @custPkgQty%> spots  at <%= @custAddress%> from <%= @custCheckin%> to <%= @custCheckout%>
 
 
 <%= form_tag charges_path do %>
