--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,7 +45,7 @@
 
 
     <ul class="nav navbar-nav navbar-right">
-      <li><a href="#">About Us</a></li>
+      <li><a href="/about">About Us</a></li>
       <% if @current_user %>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Hello, <%= @current_user.name %>! <b class="caret"></b></a>
