--- a/app/views/results/index.html.erb
+++ b/app/views/results/index.html.erb
@@ -26,7 +26,7 @@
 
 			<% if !p.available.nil? && p.available > 0 %>
 
-				<%= link_to "Pick this driveway", result_path(p), class: "btn btn-primary" %>
+				<%= link_to "Pick this driveway", result_path(p)(:checkin => checkin, :checkout => checkout), class: "btn btn-primary" %>
 			
 			<% else %>
 				<p>No more parking available at <b><%= p.title %></b></p>
@@ -42,8 +42,6 @@
 	</div>
 
 </div>
-
-
 
 <script type="text/javascript">
 
