moved images to public folder

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -73,7 +73,7 @@ body {
   padding-top: 0px;
   width: 100%;
   height: 550px;
-  background: url('seattle.png') center center;
+  background: url('/seattle.png') center center;
   background-size: cover;
   overflow: hidden;
 
@@ -107,7 +107,7 @@ body {
   #pike {
     color: white;
     font-size: 36px;
-    background: url('/assets/pike.jpg') center center;
+    background: url('/pike.jpg') center center;
     background-size: cover;
     max-width: 100%;
     height: 500px;  
@@ -142,7 +142,7 @@ body {
 
   #newyork {
     color: white;
-    background: url('/assets/newyork.jpg') center center;
+    background: url('/newyork.jpg') center center;
     background-size: cover;
     max-width: 100%;
     height: 500px;  
