--- a/app/views/results/show.html.erb
+++ b/app/views/results/show.html.erb
@@ -20,7 +20,13 @@
 				</div>
 			</div>
 			<% if @current_user %>
-			<%= link_to 'Reserve Now', new_charge_path(:property_id => @property.id), class: 'btn btn-primary' %>
+			<%= link_to 'Reserve Now', new_result_charge_path(@property,
+			checkin: params[:checkin], 
+			checkin_time: params[:checkin_time], 
+			checkout: params[:checkout], 
+			checkout_time: params[:checkout_time]
+			), 
+			class: 'btn btn-primary' %>
 			<% else %>
 			<%= link_to 'Reserve Now', result_path, class: 'btn btn-danger danger' %>
 			<% end %>
