--- a/app/views/results/index.html.erb
+++ b/app/views/results/index.html.erb
@@ -1,7 +1,7 @@
 <h1>Results page</h1>
 
 <% if params[:city].present? && params[:parking_quantity].present? && params[:checkin].present? && params[:checkout].present? %>
-	<p>Your search results for <b><%=params[:city].capitalize%></b> for <b><%=params[:parking_quantity]%></b> parking spots from <b><%=params[:checkin]%></b> to <b><%=params[:checkout]%></b>
+	<p>Your search results for <b><%=params[:city].capitalize%></b> for <b><%=params[:parking_quantity]%></b> parking spots from <b><%=params[:checkin]%></b> at <b><%=params[:checkin_time]%></b> to <b><%=params[:checkout]%></b> at <b><%=params[:checkout_time]%></b>
 	</p>
 
 <% elsif !(params[:city].present?) || !(params[:parking_quantity].present?) || !(params[:checkin].present?) || !(params[:checkout].present?)  %>
@@ -26,7 +26,13 @@
 
 			<% if !p.available.nil? && p.available > 0 %>
 
-				<%= link_to "Pick this driveway", result_path(p), class: "btn btn-primary" %>
+				<%= link_to "Pick this driveway", result_path(p, 
+					checkin: params[:checkin], 
+					checkin_time: params[:checkin_time], 
+					checkout: params[:checkout], 
+					checkout_time: params[:checkout_time]
+				),
+				class: "btn btn-primary" %>
 			
 			<% else %>
 				<p>No more parking available at <b><%= p.title %></b></p>
@@ -42,8 +48,6 @@
 	</div>
 
 </div>
-
-
 
 <script type="text/javascript">
 
