--- a/app/views/results/index.html.erb
+++ b/app/views/results/index.html.erb
@@ -30,7 +30,8 @@
 					checkin: params[:checkin], 
 					checkin_time: params[:checkin_time], 
 					checkout: params[:checkout], 
-					checkout_time: params[:checkout_time]
+					checkout_time: params[:checkout_time],
+					parking_quantity: params[:parking_quantity]
 				),
 				class: "btn btn-primary" %>
 			
