--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,13 +18,12 @@
 @import 'bootstrap-datetimepicker';
  
 // Andy's stylesheet
-#city {
-  margin-top: 9px;
+// Search bar
+input[name="checkin"], input[name="checkout"]{
+  display: inline;
+  width: 20px;
 }
 
-.searchbar {
-  display: inline-block;
-}
 
 //the end of Andy's stylesheet
 
