--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -69,16 +69,41 @@
       <%= text_field_tag :city, nil, :placeholder => "city" %>
       <%= number_field_tag :parking_quantity, nil, :placeholder => "parking_quantity"%>
       
-      <%= date_field :checkin, nil, :placeholder => "checkin" %>
-      <%= time_field :checkin_time, nil %>
-     
-      <%= date_field :checkout, nil, :placeholder => "checkout" %> 
-      <%= time_field :checkout_time, nil %>      
+       <span class='input-group date' id='datetimepicker1'>
+          <input type='text' class="form-control" name="checkin" placeholder="Check in date and time" />
+          <span class="input-group-addon">
+              <span class="glyphicon glyphicon-calendar"></span>
+          </span>
+      </span>
+
+      <span class='input-group date' id='datetimepicker2'>
+          <input type='text' class="form-control" name="checkout" placeholder="Check out date and time"/>
+          <span class="input-group-addon">
+              <span class="glyphicon glyphicon-calendar"></span>
+          </span>
+      </span>
+      
       <%= submit_tag "Search Near", :name => nil %>
     </p>     
   
   <% end %>
 </div>
+
+
+            
+               
+             
+             
+
+
+
+
+ <script type="text/javascript">
+          $(function () {
+              $('#datetimepicker1').datetimepicker();
+              $('#datetimepicker2').datetimepicker();
+          });
+      </script>
 
 <!-- <div class="container-fluid"> -->
   <%= render 'partials/flash' %>
