--- a/app/views/charges/new.html.erb
+++ b/app/views/charges/new.html.erb
@@ -1,5 +1,5 @@
 
-<p>You are booking for <b><%= @address %></b> for <b><%= @custPkgQty %></b> parking spots from <b><%= @custCheckin%></b>  at <b><%= @custCheckinTime %></b> to <b><%= @custCheckout%></b> at <b><%= @custCheckoutTime %></b></p>
+<p>You are booking for <b><%= @address %></b> for <b><%= @custPkgQty %></b> parking spots from <b><%= @custCheckin%></b> to <b><%= @custCheckout%></b></p>
 
 
 <%= form_tag result_charges_path do %>
