changed query to not include current user

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,10 +21,10 @@
 // Search bar
 
 .searchbar {
+  border: 2px solid red;
   .big {
-    width: 250px;
+    width: 200px;
   }
-
 }
 
 //the end of Andy's stylesheet
