--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,10 +21,64 @@
 // Search bar
 
 .searchbar {
-  border: 2px solid red;
-  .big {
-    width: 200px;
+  background: linear-gradient(#30448D,#4C4980);
+  margin: 0 auto;
+  text-align: center;
+
+  input[name="checkout"] {
+    margin-left: -15px;
   }
+
+
+
+  .big {  
+    margin-left: 3.5px;
+    display: inline-block;
+    width: 220px;
+  }
+
+  .calendar {
+    height: 34px;
+    margin-top: -1.7px;
+    margin-left: -4.2px;
+    text-align: center;
+    width: 180px;
+  }
+
+  .searchbox {
+    display: inline;
+    height: 34px;
+    margin: 12px -3.5px 12px 0px;
+    text-align: center;
+    width: 180px;
+  }
+
+  .search_btn {
+    margin-top: -2px;
+    margin-left: 20px;
+  }
+
+  .small_1 {
+    border-radius: 0;
+    height: 34px;
+    margin-left: -4.5px;
+    margin-top: -1.8px;
+    width: 40px;
+    display: inline-block;
+  }
+
+  .small_2 {
+    top: 3.5px;
+  }
+
+  #datetimepicker2 {
+    margin-left: 6.5px;
+  }
+  
+  #small_2 {
+    margin-left: -14.5px;
+  }
+
 }
 
 //the end of Andy's stylesheet
