--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -26,57 +26,55 @@
   text-align: center;
 
   input[name="checkout"] {
-    margin-left: -15px;
+    // margin-left: -15px;
   }
 
-
-
   .big {  
-    margin-left: 3.5px;
-    display: inline-block;
-    width: 220px;
+    // margin-left: 3.5px;
+    // display: inline-block;
+    // width: 220px;
   }
 
   .calendar {
-    height: 34px;
-    margin-top: -1.7px;
-    margin-left: -4.2px;
+    // height: 34px;
+    // margin-top: -1.7px;
+    // margin-left: -4.2px;
     text-align: center;
-    width: 180px;
+    // width: 180px;
   }
 
   .searchbox {
-    display: inline;
-    height: 34px;
-    margin: 12px -3.5px 12px 0px;
+    // display: inline;
+    // height: 34px;
+    // margin: 12px -3.5px 12px 0px;
     text-align: center;
-    width: 180px;
+    // width: 180px;
   }
 
   .search_btn {
-    margin-top: -2px;
-    margin-left: 20px;
+    // margin-top: -2px;
+    // margin-left: 20px;
   }
 
   .small_1 {
     border-radius: 0;
-    height: 34px;
-    margin-left: -4.5px;
-    margin-top: -1.8px;
-    width: 40px;
-    display: inline-block;
+    // height: 34px;
+    // margin-left: -4.5px;
+    // margin-top: -1.8px;
+    // width: 40px;
+    // display: inline-block;
   }
 
   .small_2 {
-    top: 3.5px;
+    // top: 3.5px;
   }
 
   #datetimepicker2 {
-    margin-left: 6.5px;
+    // margin-left: 6.5px;
   }
   
   #small_2 {
-    margin-left: -14.5px;
+    // margin-left: -14.5px;
   }
 
 }
