still working on styles for payment pages but just wanted to save stuff

--- a/app/views/charges/create.html.erb
+++ b/app/views/charges/create.html.erb
@@ -1,3 +1,14 @@
-<h2>Congratulations, you have paid <strong>$10.00</strong> for parking!</h2>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css">
+  <link rel="stylesheet" media="screen" href="//netdna.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+  <link rel="stylesheet" href="/stylesheets/application.scss">
+  <script src="//code.jquery.com/jquery.js"></script>
+  <script src="//netdna.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 
-<h3>Host will expect you soon</h3>
+<div class="container">
+	<div class="row">
+	    <div class="span12 text-center">
+			<h2>Congratulations, you have paid <strong>$10.00</strong> for parking!</h2>
+			<h3>Host will expect you soon</h3>
+		</div>
+	</div>
+</div>
