--- a/app/views/charges/new.html.erb
+++ b/app/views/charges/new.html.erb
@@ -1,22 +1,35 @@
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css">
+<link rel="stylesheet" media="screen" href="//netdna.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+<link rel="stylesheet" href="/stylesheets/application.scss">
 
-<p>You are booking for <b><%= @address %></b> for <b><%= @custPkgQty %></b> parking spots from <b><%= @custCheckin%></b> to <b><%= @custCheckout%></b></p>
 
+<div class="container">
+  <div class="row">
+      <div class="span12 text-center">
+          <h1>Confirm Payment</h1>
+          <p>You are booking for <b><%= @address %></b> for <b><%= @custPkgQty %></b> parking spots from <b><%= @custCheckin%></b> to <b><%= @custCheckout%></b>.</p>
 
-<%= form_tag result_charges_path do %>
-  <article>
-    <% if flash[:error].present? %>
-      <div id="error_explanation">
-        <p><%= flash[:error] %></p>
+      <%= form_tag result_charges_path do %>
+        <p class="text-center">
+          <% if flash[:error].present? %>
+            <div id="error_explanation">
+              <p><%= flash[:error] %></p>
+            </div>
+          <% end %>
+          <label class="amount">
+            <span class="center">Amount: $10.00</span>
+          </label>
+        </p>
+
+        <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
+                data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
+                data-description="Parking fee"
+                data-amount="1000"
+                data-locale="auto"></script>
+      <% end %>
       </div>
-    <% end %>
-    <label class="amount">
-      <span>Amount: $10.00</span>
-    </label>
-  </article>
+  </div>
+</div>
 
-  <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
-          data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
-          data-description="Parking fee"
-          data-amount="1000"
-          data-locale="auto"></script>
-<% end %>
+
+
