--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -54,27 +54,32 @@
   </div><!-- /.navbar-collapse -->
 </nav>
 
-<div class="searchbar form-group">
-  <%= form_tag results_path, :method => :get do %>
+<div class="searchbar">
+  <%= bootstrap_form_tag url: results_path, :method => :get, layout: :inline do |f| %>
     
-      <%= text_field_tag :city, nil, :placeholder => "Address", class: "searchbox" %>
-      <%= number_field_tag :parking_quantity, nil, :placeholder => "Parking spot", class: "searchbox" %>
+      <%= f.text_field :city, :hide_label => true, :placeholder => "Address" %>
+      <%= f.number_field :parking_quantity, :hide_label => true, :placeholder => "Parking spot" %>
       
-      <span class='big input-group date' id='datetimepicker1'>
-          <input type='text' class="calendar form-control" name="checkin" placeholder= "Check in date/time" />
-          <span class="small_1 input-group-addon">
-              <span class="small_2 glyphicon glyphicon-calendar"></span>
-          </span>
-      </span>
+
+      <div class="form-group date">
+        <div class="input-group" id='datetimepicker1'>
+          <label class="control-label hidden" for="checkin">Checkin</label><input placeholder="Check in date/time" class="form-control" name="checkin" id="checkin" type="text">
+          <div class="input-group-addon">
+              <span class="glyphicon glyphicon-calendar"></span>
+          </div>
+        </div>
+      </div>
+
+      <div class="form-group date">
+        <div class="input-group" id='datetimepicker2'>
+          <label class="control-label hidden" for="checkout">Checkout</label><input placeholder="Check in date/time" class="form-control" name="checkout" id="checkout" type="text">
+          <div class="input-group-addon">
+              <span class="glyphicon glyphicon-calendar"></span>
+          </div>
+        </div>
+      </div>
       
-      <span class='big input-group date' id='datetimepicker2'>
-          <input type='text' class="calendar form-control" name="checkout" placeholder= "Check out date/time" />
-          <span id="small_2" class="small_1 input-group-addon">
-              <span class="small_2 glyphicon glyphicon-calendar"></span>
-          </span>
-      </span>
-      
-      <%= submit_tag "Search Near", :name => nil, class: "search_btn btn btn-primary" %>
+      <%= f.submit "Search Near", :name => nil, class: "search_btn btn btn-primary" %>
     
   
   <% end %>
