--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -13,12 +13,20 @@
           <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique eos odio doloribus qui perspiciatis, totam perferendis, hic nemo architecto dolore accusantium ea. Ea porro necessitatibus non quis cupiditate, enim aspernatur.
           </p>
+      </div>
     </div>
   </div>
+  <br />
 
   <div class="row">
-    <div class="col-xs-12 col-md-10 col-md-offset-1">
+    <div class="col-xs-12 col-sm-6 col-md-5 col-md-offset-1">
       <div clas="img-responsive" id="newyork">
+        <h2>Park</h2>
+      </div>
+    </div>
+    <div class="col-xs-12 col-sm-6 col-md-5">
+      <div clas="img-responsive" id="amsterdam">
+        <h2>Anywhere</h2>
       </div>
     </div>
   </div>
