results id looks gorgeous

--- a/app/assets/stylesheets/results.scss
+++ b/app/assets/stylesheets/results.scss
@@ -13,3 +13,46 @@
 .results_row {
 	padding: 1em
 }
+
+#bus {
+	background-color: #40B3DF;
+	border: 1px solid #14A7DF;
+	color: white;
+	font-size: 18px;
+}
+
+#route {
+	margin-top: -20px;
+}
+
+.mapButton {
+	border-radius: 5px;
+}
+
+#directions {
+	margin-top: -10px;
+}
+
+.bg_id {
+	background-image: url("/night_pic.jpg");
+	bacground-repeat: no-repeat;
+	background-size: 100%;
+}
+
+.resultsHeader {
+	color: white;
+}
+
+#content {
+	background-color: rgba(245,245,245, 0.7);
+}
+
+
+
+
+
+
+
+
+
+
